// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BadgeCell Default 1`] = `
<td
  className="align-middle"
>
  <div
    className="d-flex align-items-center"
  >
    <span>
      Badge Cell
    </span>
    <span
      className="ml-1 badge badge-pill badge-primary"
    >
      Primary
    </span>
    <span
      className="ml-1 badge badge-pill badge-secondary"
    >
      Secondary
    </span>
    <span
      className="ml-1 badge badge-pill badge-success"
    >
      Success
    </span>
    <span
      className="ml-1 badge badge-pill badge-danger"
    >
      Danger
    </span>
    <span
      className="ml-1 badge badge-pill badge-warning"
    >
      Warning
    </span>
    <span
      className="ml-1 badge badge-pill badge-info"
    >
      Info
    </span>
    <span
      className="ml-1 badge badge-pill badge-light"
    >
      Light
    </span>
    <span
      className="ml-1 badge badge-pill badge-dark"
    >
      Dark
    </span>
  </div>
</td>
`;

exports[`Storyshots Cell Default 1`] = `
<td
  className="align-middle"
/>
`;

exports[`Storyshots Cell Loading 1`] = `
<td
  className="align-middle"
>
  <span
    className="glow-text"
  >
    Loading
  </span>
</td>
`;

exports[`Storyshots TableComponent Default 1`] = `
<table
  className="table table-hover"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colSpan={1}
        role="columnheader"
      >
        Name
      </th>
      <th
        colSpan={1}
        role="columnheader"
      >
        State
      </th>
      <th
        colSpan={1}
        role="columnheader"
      >
        Tooltip
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      role="row"
    >
      <td
        className="align-middle"
      >
        <span>
          Item 1
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span>
          public
        </span>
      </td>
      <td
        className="align-middle"
      >
        <div
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          1
        </div>
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className="align-middle"
      >
        <span>
          Item 2
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span>
          private
        </span>
      </td>
      <td
        className="align-middle"
      >
        <div
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          2
        </div>
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className="align-middle"
      >
        <span>
          Item 3
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span>
          public
        </span>
      </td>
      <td
        className="align-middle"
      >
        <div
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          3
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots TableComponent Loading 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        <span
          className="glow-text"
        >
          Loading
        </span>
      </th>
      <th>
        <span
          className="glow-text"
        >
          Loading
        </span>
      </th>
      <th>
        <span
          className="glow-text"
        >
          Loading
        </span>
      </th>
      <th>
        <span
          className="glow-text"
        >
          Loading
        </span>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
      <td
        className="align-middle"
      >
        <span
          className="glow-text"
        >
          Loading
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots TextCell Default 1`] = `
<td
  className="align-middle"
>
  <span>
    Hello World
  </span>
</td>
`;

exports[`Storyshots TooltipCell Default 1`] = `
<td
  className="align-middle"
>
  <div
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Label
  </div>
</td>
`;
